--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <h1 id="demo"></h1>
             <p>Computer Science & Engineering</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://github.com/Sarfaraz004"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.linkedin.com/in/sarfaraz-sattar-8253b72a1/"><i class='bx bxl-linkedin' ></i></a>
                 <a href="#"><i class='bx bxl-facebook' ></i></a>
                 <a href="#"><i class='bx bxl-twitter' ></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
@@ -73,8 +73,7 @@
             <img src="123.jpg" alt="">
         </div>
         <div class="about-content">
-            <br><br>
-            <h2 class="heading">About <span>Me</span></h2>
+            <h2 class="heading" style="text-align: center;">About <span>Me</span></h2><br>
             <h3>Hi, I am <b>Sarfaraz Sattar</b></h3>
             <p>Pursuing Computer Science Engineering degree in Jain College of Engineering and Research, Belagavi And I am willing to Learn Web development, Create Applications and also intersted in AI and ML field. <br>Along with my degree, I have completed Python for Datascience course on NPTEL, and also some other courses in coursera, Great Learning and Etc.</p>
             <a href="#" class="btn">Show More</a>
