moditing the main brach

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <header class="header">
         <a href="#" class="logo">Portfolio.</a>
@@ -23,38 +25,38 @@
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
 
-            <!-- Home Section -->
+    <!-- Home Section -->
 
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, I am</h3>
+            <h3>Hello, I am</h3><br>
             <h1 id="demo"></h1>
             <p>Computer Science & Engineering</p>
             <div class="social-media">
-                <a href="https://github.com/Sarfaraz004"><i class='bx bxl-github' ></i></a>
-                <a href="https://www.linkedin.com/in/sarfaraz-sattar-8253b72a1/"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://github.com/Sarfaraz004"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/sarfaraz-sattar-8253b72a1/"><i class='bx bxl-linkedin'></i></a>
+                <a href="mailto:sarfarazsattar09@gmail.com"><i class='bx bx-envelope'></i></a>
+                <a href="#"><i class='bx bxl-codepen'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <button onclick="window.open('resume/resume.pdf', '_blank')" class="btn">View Resume</button>
         </div>
         <div class="profession-container">
             <div class="profession-box">
                 <div class="profession" style="--i:0;">
-                    <i class='bx bx-code-alt' ></i>
+                    <i class='bx bx-code-alt'></i>
                     <h3>Web Devloper</h3>
                 </div>
                 <div class="profession" style="--i:1;">
-                    <i class='bx bxs-data' ></i>
+                    <i class='bx bxs-data'></i>
                     <h3>Data Scientist</h3>
                 </div>
                 <div class="profession" style="--i:2;">
-                    <i class='bx bx-palette' ></i>
+                    <i class='bx bx-palette'></i>
                     <h3>Web Designer</h3>
                 </div>
                 <div class="profession" style="--i:3;">
-                    <i class='bx bx-message-square-dots' ></i>
+                    <i class='bx bx-message-square-dots'></i>
                     <h3>Engineer</h3>
                 </div>
                 <div class="circle"></div>
@@ -66,16 +68,19 @@
         </div>
     </section>
 
-        <!-- About Page -->
+    <!-- About Page -->
 
-    <section class="about"id="about">
+    <section class="about" id="about">
         <div class="about-img">
             <img src="123.jpg" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading" style="text-align: center;">About <span>Me</span></h2><br>
             <h3>Hi, I am <b>Sarfaraz Sattar</b></h3>
-            <p>Pursuing Computer Science Engineering degree in Jain College of Engineering and Research, Belagavi And I am willing to Learn Web development, Create Applications and also intersted in AI and ML field. <br>Along with my degree, I have completed Python for Datascience course on NPTEL, and also some other courses in coursera, Great Learning and Etc.</p>
+            <p>Pursuing Computer Science Engineering degree in Jain College of Engineering and Research, Belagavi And I
+                am willing to Learn Web development, Create Applications and also intersted in AI and ML field.
+                <br>Along with my degree, I have completed Python for Datascience course on NPTEL, and also some other
+                courses in coursera, Great Learning and Etc.</p>
             <a href="#" class="btn">Show More</a>
             <a href="#" class="btn1">Github</a>
         </div>
@@ -85,22 +90,22 @@
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bxl-python' ></i>
-                <h3>Python</h3>
+                    <h3>Python</h3>
                 <p>Python is a high-level, interpreted programming language known for its readibility. its clean syntax, emphasing indentation, makes it easy to learn and write, enhancing code readibility. It supports multiple programming paradigms.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
+                    <a href="#" class="btn">Read More</a>
+                </div>
             <div class="services-box">
                 <i class='bx bxl-java' ></i>
-                <h3>Java</h3>
+                    <h3>Java</h3>
                 <p>Java is a versatile, object-oriented programming language reowned for its platform independence. Programs written in java can run on any device with a Java Virtual Machine </p>
-                <a href="#" class="btn">Read More</a>
-            </div>
+                    <a href="#" class="btn">Read More</a>
+                </div>
             <div class="services-box">
                 <i class='bx bxl-c-plus-plus' ></i>
-                <h3>C++</h3>
+                    <h3>C++</h3>
                 <p>C++ is a powerful, multi-paradigm programming language that extends the capabilities of C language. It support both procedural and object-oriented programming.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
+                    <a href="#" class="btn">Read More</a>
+                </div>
         </div>
         <br><br><br>
         <div class="services-container">
@@ -125,45 +130,45 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="Project-1.jpg" alt="">
+                <img src="images/Project-1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>“E-commerce Website”</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="Project-2 (1).jpg" alt="">
+                <img src="images/Project-2 (1).jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>“Stock Market Analysis using Python”</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="Project-3.jpg" alt="">
+                <img src="images/Project-3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>“Topple Risk Detection in Vehicles using Arduino”</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="Project-4.jpg" alt="">
+                <img src="images/Project-4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>“AI ChatBot”</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="Project-5.jpg" alt="">
+                <img src="images/Project-5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>“Hospital Management System”</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="Project-6.jpg" alt="">
+                <img src="images/Project-6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>“College Management System”</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
@@ -177,24 +182,40 @@
             <div class="testimonial-box mySwiper">
                 <div class="testimonial-content swiper-wrapper">
                     <div class="testimonial-slide swiper-slide">
-                        <img src="certificate1.png" alt="">
+                        <img src="images/certificate1.png" alt="">
                         <h3>Microsoft Certificate</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima, saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita
+                            tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum
+                            temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates
+                            cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima,
+                            saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
                     </div>
                     <div class="testimonial-slide swiper-slide">
-                        <img src="certificate2.png" alt="">
+                        <img src="images/certificate2.png" alt="">
                         <h3>Devtown JS</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima, saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita
+                            tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum
+                            temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates
+                            cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima,
+                            saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
                     </div>
                     <div class="testimonial-slide swiper-slide">
-                        <img src="certificate3.png" alt="">
+                        <img src="images/certificate3.png" alt="">
                         <h3>Savishkar <q>Hack Verse</q></h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima, saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita
+                            tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum
+                            temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates
+                            cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima,
+                            saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
                     </div>
                     <div class="testimonial-slide swiper-slide">
-                        <img src="certificate4.png" alt="">
+                        <img src="images/certificate4.png" alt="">
                         <h3>Data Analysis in Python</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima, saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem culpa expedita
+                            tempora alias perferendis voluptatibus ipsa quas dolorum ad iste eveniet perspiciatis illum
+                            temporibus, quo officia! Dolorem quas eum laudantium aspernatur ex neque officiis voluptates
+                            cum reprehenderit molestias earum numquam, iste explicabo dolorum! Recusandae, ad minima,
+                            saepe, est fugit sit nisi velit id dolor ratione et eum aliquam quidem ipsa?</p>
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
@@ -222,8 +243,8 @@
         </form>
     </section>
     <p class="copywrite1">
-        <h2 class="copywrite">Created by Sarfaraz Sattar</h2>
-        <br><br>
+    <h2 class="copywrite">Created by Sarfaraz Sattar</h2>
+    <br><br>
     </p>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
