addding experiance section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
+    <link rel="icon" type="image/png" href="images/logo.png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="main.css">
@@ -40,7 +41,7 @@
                 <a href="https://www.linkedin.com/in/sarfaraz-sattar-8253b72a1/"><i class='bx bxl-linkedin'></i></a>
                 <a href="mailto:sarfarazsattar09@gmail.com"><i class='bx bx-envelope'></i></a>
                 <a href="#"><i class='bx bxl-codepen'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="https://leetcode.com/u/Sarfaraz_004/"><i class='bxl bx-leetcode'></i></a>
             </div>
             <button onclick="window.open('resume/resume.pdf', '_blank')" class="btn">View Resume</button>
         </div>
@@ -98,7 +99,11 @@
 
     <!-- Experience Section -->
     <section class="experience" id="experience">
-        <h2 class="heading">My <span>Experience</span></h2>
+        <h2 class="heading">My <span>Experience</span></h2><br><br>
+            <div class="container">
+                <div class="tree" id="experienceTree">
+                </div>
+            </div>
     </section>
 
     <!-- Skills Section -->
@@ -123,7 +128,8 @@
                 <div class="swiper-slide services-box">
                     <i class='bx bxl-java'></i>
                     <h3>Java</h3>
-                    <p>Skilled in object-oriented programming and developing scalable enterprise applications in Java.</p>
+                    <p>Skilled in object-oriented programming and developing scalable enterprise applications in Java.
+                    </p>
                     <div class="progress-bar">
                         <div class="skill-bar">
                             <div class="skill-fill" data-percentage="70"></div>
@@ -134,7 +140,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide services-box">
-                    <i class='bxl  bx-django' ></i> 
+                    <i class='bxl bx-django'></i>
                     <h3>Django</h3>
                     <p>Experienced in building web applications using the Django framework.</p>
                     <div class="progress-bar">
